# FADTTS

./: .gitignore  CMakeLists.txt  Data.cpp  Data.cxx  Data.h  EditInputDialog.cpp  EditInputDialog.cxx  EditInputDialog.h  EditInputDialog.ui  FADTTS.cxx  FADTTS.xml  FADTTSWindow.cpp  FADTTSWindow.cxx  FADTTSWindow.h  FADTTSWindow.ui  FADTTSWindowConfig.cpp  FADTTSWindowConfig.cxx  FADTTSWindowConfig.h  FADTTS_Resources.qrc  FADTTS_noGUI.cxx  FADTTS_noGUI.h  FADTTSter.cxx  FADTTSter.xml  InfoDialog.cpp  InfoDialog.cxx  InfoDialog.h  License.txt  Log.cxx  Log.h  MatlabRefScript.m  MatlabScript.cxx  MatlabScript.h  MatlabThread.cxx  MatlabThread.h  Plot.cxx  Plot.h  Processing.cpp  Processing.cxx  Processing.h  QCThresholdDialog.cxx  (+19 more)
Code/: EditInputDialog.cxx  FADTTSWindow.cxx  FADTTSter.cxx  FADTTSter.xml  Log.cxx  MatlabThread.h  Processing.cxx
Code/Resources/MatlabFiles/: matlabScript.m  matlabScriptWithPlotting.m
Code/Testing/: TestPlot.h
Code/Testing/data/: testADMatlabInput.csv.md5  testNoGUIConfiguration.json.md5  testPlot1_Omnibus_ConfidenceBands_MD.csv.md5  testPlot1_RawData_RD.csv.md5  testPlot2_Betas_FA.csv.md5  testPlot2_Omnibus_FDR_Local_pvalues.csv.md5  testRDRawDataTransposed.csv.md5  testSort_RawData_RD.csv.md5  testSort_RawData_SUBMATRIX.csv.md5  testSubMatrixMatlabInput.csv.md5  testSubjectList.txt.md5  test_Betas_FA.eps.md5  test_PostHoc_FDR_Local_pvalues_RD.csv.md5
Resources/: SPIE2017Poster.pptx
Resources/ConfigurationFiles/: fadttsSettings.json  noGUIConfiguration.json  noGUISettings.json  paraConfiguration.json  paramSettings.json  plotSettings.json  softConfiguration.json  softSettings.json
Resources/Icons/: okIconOut.xpm
Resources/MatlabFiles/: MatlabScriptRef.m  MatlabScriptRefWithPlots.m  matlabScript.m  matlabScriptWithPlotting.m  myFDR.m
Resources/UserGuide/: UserGuide.txt
Resources/article/: FADTTSter_article.bib  FADTTSter_article.tex  build.sh  convert.sh
Resources/article/images/: applyQC1Out.eps  applyQC2Out.eps  deleteColumnsOut.eps  namicFrameworkOut.eps  plottingTab1Out.eps  plottingTab2Out.eps  profileCroppingOut.eps
Testing/: CMakeLists.txt  TestData.cxx  TestData.h  TestEditInputDialog.cxx  TestEditInputDialog.h  TestFADTTSWindow.cxx  TestFADTTSWindow.h  TestInfoDialog.cxx  TestInfoDialog.h  TestMatlabScript.cxx  TestMatlabScript.h  TestMatlabThread.cxx  TestMatlabThread.h  TestPlot.cxx  TestPlot.h  TestProcessing.cxx  TestProcessing.h  TestQCThresholdDialog.cxx  TestQCThresholdDialog.h  mainTestData.cxx  mainTestEditInputDialog.cxx  mainTestFADTTSWindow.cxx  mainTestInfoDialog.cxx  mainTestMatlabScript.cxx  mainTestMatlabThread.cxx  mainTestPlot.cxx  mainTestProcessing.cxx  mainTestQCThresholdDialog.cxx
Testing/data/: COMP_0_TestFADTTS_Input.csv.md5  COMP_3_TestFADTTS_Input.csv.md5  FADTTSAnalysis_MatlabScript_TestFADTTS_259perm.m.md5  FADTTSAnalysis_MatlabScript_Test_259perm_noPlotting.m.md5  FADTTSAnalysis_MatlabScript_Test_259perm_plotting.m.md5  TestFADTTS_FADTTSAnalysis_MatlabScript.m.md5  ad_TestFADTTS_Input.csv.md5  fa_TestFADTTS_Input.csv.md5  fa_TestFADTTS_MatlabInput.csv.md5  koIconOut.xpm.md5  matlabScript_TestFADTTS_RunInput.m.md5  md_TestFADTTS_Input.csv.md5  md_TestFADTTS_MatlabInput.csv.md5  myFDR.m.md5  okIconOut.xpm.md5  plotSettings.csv.md5  plotSettings.json.md5  rd_TestFADTTS_Input.csv.md5  rd_TestFADTTS_MatlabInput.csv.md5  testADModifiedInput.csv.md5  testFAPostHocFDRTransposed.csv.md5  testFARawDataTransposed.csv.md5  testGetDataFromFile_N.csv.md5  testParaConfiguration.json.md5  testParaNoConfiguration.json.md5  testParaNoSettings.xml.md5  testParaSettings.xml.md5  testPlot1_Betas_MD.csv.md5  testPlot1_Betas_RD.csv.md5  testPlot1_PostHoc_FDR_Local_pvalues_RD.csv.md5  testPlot1_RawData_MD.csv.md5  testPlot2_Betas_AD.csv.md5  testRefMatlabScriptWithPlots.m.md5  testSoftNoSettings.xml.md5  testSoftSettings.xml.md5  testSort_RawData_FA.csv.md5  test_Betas_FA.csv.md5  test_Betas_FA.pdf.md5  test_Omnibus_Local_pvalues.csv.md5  test_RawData_FA.csv.md5  (+4 more)
doc/ConfigurationFiles_Example/: exampleNoGUIConfiguration.json  exampleParaConfiguration.json  exampleSoftConfiguration.json
doc/UserGuide/: fadttsterUserGuide_advancedUse.tex  fadttsterUserGuide_build.tex  fadttsterUserGuide_matlabScriptGeneration.tex  fadttsterUserGuide_statisticalDataPlotting.tex
doc/UserGuide/Latex/: fadttsterUserGuide.bib  fadttsterUserGuide_appendices.tex  fadttsterUserGuide_header.tex  fadttsterUserGuide_intro.tex  fadttsterUserGuide_master.tex  fadttsterUserGuide_matlabScriptGeneration.tex  fadttsterUserGuide_titlePage.tex  fadttsterUserGuide_use.tex
src/: CMakeLists.txt  EditInputDialog.cxx  EditInputDialog.ui  FADTTSWindow.cxx  FADTTSWindow.h  FADTTSWindow.ui  FADTTS_Resources.qrc  FADTTS_noGUI.cxx  FADTTS_noGUI.h  FADTTSter.cxx  FADTTSter.xml  Log.h  MatlabThread.cxx  MatlabThread.h  Plot.cxx  Plot.h  QCThresholdDialog.cxx  QCThresholdDialog.h  QCThresholdDialog.ui
src/CMake/: FADTTSConfig.cmake.in
src/Resources/Icons/: logoFADTTSter_small.icns
src/Resources/MatlabFiles/: myFDR.m
src/Testing/: TestEditInputDialog.cxx  TestEditInputDialog.h  TestMatlabThread.cxx  TestPlot.cxx  TestProcessing.h  mainTestPlot.cxx  mainTestProcessing.cxx
src/Testing/data/: newADFile.csv.md5  testGetDataFromFile_R.csv.md5  testGetDataFromFile_RN.csv.md5  testOmnibusLpvaluesTransposed.csv.md5  testPlot1_Omnibus_ConfidenceBands_RD.csv.md5  testPlot1_PostHoc_FDR_Local_pvalues_MD.csv.md5  testPlot1_RawData_SUBMATRIX.csv.md5  testPlot2_RawData_AD.csv.md5  testPlot2_RawData_FA.csv.md5  testPlot2_RawData_SUBMATRIX.csv.md5  testRDPostHocFDRTransposed.csv.md5  testRefMatlabScriptWithPlots.m.md5  testSoftConfiguration.json.md5  testSoftNoConfiguration.json.md5  test_Betas_RD.csv.md5  test_Omnibus_ConfidenceBands_FA.csv.md5  test_Omnibus_ConfidenceBands_RD.csv.md5  test_Omnibus_FDR_Local_pvalues.csv.md5  test_PostHoc_FDR_Local_pvalues_FA.csv.md5
